# ddg-cli

./: .envrc.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dd/: cli.py  client.py
dd/commands/: apm.py  event.py  host.py  metric.py  monitor.py
dd/utils/: error.py  time.py
ddg/: cli.py  client.py  config.py
ddg/commands/: apm.py  dbm.py  event.py  host.py  investigate.py  logs.py  metric.py  monitor.py
ddg/utils/: tags.py
ddogctl/: cli.py  client.py  config.py
ddogctl/commands/: apply.py  ci.py  completion.py  config.py  downtime.py  logs.py  monitor.py  notebook.py  rum.py  tag.py  user.py
ddogctl/utils/: confirm.py  error.py  exit_codes.py  export.py  file_input.py  output.py  watch.py
docs/plans/: 2026-02-12-ddogctl-roadmap-design.md  2026-02-12-open-source-ddg-cli-design.md  2026-02-12-open-source-ddg-cli.md
reports/: _template.html
scripts/: dd_cli.sh
tests/: check_role_permissions.sh  conftest.py  create_staging_users.sql  manual_test_results.md  test_aliases.py  test_all_staging_users.sh  test_client.py  test_config.py  test_config_profiles.py  test_default_privileges.sh  test_staging_users.sh
tests/commands/: test_apm.py  test_apply.py  test_ci.py  test_completion.py  test_config.py  test_dbm.py  test_downtime.py  test_event.py  test_host.py  test_investigate.py  test_logs.py  test_metric.py  test_monitor.py  test_notebook.py  test_rum.py  test_tag.py  test_user.py
tests/utils/: test_confirm.py  test_error.py  test_exit_codes.py  test_export.py  test_file_input.py  test_output.py  test_tags.py  test_time.py  test_watch.py
