[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ddg", "ddg.commands", "ddg.formatters", "ddg.models", "ddg.utils"]

[project]
name = "ddg-cli"
version = "0.1.0"
description = "A modern CLI for the Datadog API. Like Dogshell, but better."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["datadog", "cli", "monitoring", "observability", "apm", "logs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-api-client>=2.29.0",
    "click>=8.1.7",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "python-dateutil>=2.9.0",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "jinja2>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
ddg = "ddg.cli:main"

[project.urls]
Homepage = "https://github.com/sergiofrancovel/ddg-cli"
Issues = "https://github.com/sergiofrancovel/ddg-cli/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests (use -m 'not integration' to skip)",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
